<resources>
    <string name="app_name">LocadoraApp</string>
    <string name="tela_atualizar_filme">Atualizar Filme</string>
    <string name="tela_cadastrar_filme">Cadastral Filme</string>
    <string name="tela_cadastro_usuario_login">Digite o Login</string>
    <string name="tela_cadastro_usuario_pswd">Digite a senha</string>
    <string name="tela_cadastro_usuario_pswd_confirm">Confirme a senha</string>
    <string name="tela_cadastro_usuario_salvar">Salvar</string>
    <string name="tela_login_usuario_login">Digite o Login</string>
    <string name="tela_login_usuario_pswd">Digite a senha</string>
    <string name="tela_login_usuario_enter">Entrar</string>
    <string name="tela_login_usuario_register">Registrar</string>
    <string name="tela_menu_logout">Sair</string>
    <string name="tela_menu_cadastrar_filme">Cadastral Filme</string>
    <string name="tela_menu_listar_filmes">Listar Filmes</string>
    <string name="tela_menu_listas_filmes_proprios">Listar Meus Filmes</string>
    <string name="tela_menu_welcome">Bem-vindo</string>
    <string name="tela_cadastro_filme_salvar">Salvar</string>
    <string name="tela_cadastro_filme_remover">Remover</string>
    <string name="tela_cadastro_filme_nome">Nome do filme</string>

    <string name="dialog_title">Remover Filme</string>
    <string name="dialog_message">Tem certeza que deseja remover este filme do sistema?</string>
    <string name="cancel">Cancelar</string>

    <array name="filme_generos">
        <item>Ação</item>
        <item>Suspense</item>
        <item>Comédia</item>
        <item>Drama</item>
        <item>Terror</item>
        <item>Documentário</item>
    </array>
</resources>
