<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editUsuarioLoginLogin"
        android:hint="@string/tela_login_usuario_login"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editUsuarioLoginPswd"
        android:hint="@string/tela_login_usuario_pswd"
        android:inputType="textPassword"/>
    <Button
        android:onClick="logarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tela_login_usuario_enter"/>
    <Button
        android:onClick="registrarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tela_login_usuario_register"/>
</LinearLayout>
