<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tela_cadastro_filme_nome"/>
    <Spinner
        android:id="@+id/editGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/filme_generos"/>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/tela_cadastro_filme_salvar"/>
    <Button
        android:id="@+id/btnRemover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/tela_cadastro_filme_remover"/>
</merge>