<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.opet.locadoraapp.activity.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:columnCount="2"
        android:rowCount="1">
        <TextView
            android:id="@+id/welcome_user_name"
            android:textSize="20sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="Testando"/>

        <TextView
            android:textSize="20sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:textAlignment="textEnd"
            android:text="@string/tela_menu_logout"/>
    </GridLayout>

    <GridLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="80dp"
        android:rowCount="3"
        android:columnCount="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tela_menu_cadastrar_filme"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tela_menu_listar_filmes"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tela_menu_listas_filmes_proprios"/>
    </GridLayout>

</LinearLayout>
